<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PrivacyActivity">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:text="@string/policy_text" />

   <TextView
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:layout_marginTop="50dp"
       android:layout_marginBottom="50dp"
       android:text="@string/text_policy"
       android:textAlignment="center"
       android:layout_centerHorizontal="true"
       android:textSize="25dp"
       android:textColor="@color/primary"
       />


    <Button
        android:id="@+id/back_policy"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:text="@string/back"
        android:textSize="20dp"
        />

</RelativeLayout>